--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -31,7 +31,7 @@
             translatable="false">&APP_NAME;</string>
 
     <string name="lbl_github"
-            translatable="false">github</string>
+            translatable="false">GitHub</string>
     <string name="sourcecode_url"
             translatable="false">https://github.com/tfonteyn/NeverTooManyBooks</string>
     <string name="help_url"
