disable/hide reordering publisher names. We need to add a specific set of prefix words to make this useful.

--- a/app/src/main/res/xml/preferences_style.xml
+++ b/app/src/main/res/xml/preferences_style.xml
@@ -268,7 +268,9 @@
         tools:isPreferenceVisible="true"
         >
 
+        <!-- TODO: reordering publisher names is hidden / disabled for now. -->
         <SwitchPreference
+            app:isPreferenceVisible="false"
             android:defaultValue="false"
             android:icon="@drawable/ic_baseline_reorder_24"
             android:key="show.publisher.name.reordered"
